# omid-openalex

./: .gitignore  README.md  analysis_guide.ipynb  config_server.yaml  mm_categ_config.yaml  multi_mapped_analysis.ipynb  multi_mapped_omids.csv  prov_analysis_config_server.yaml  provenance_analysis.ipynb  provenance_analysis_results.json  pyproject.toml
analytics/: analyse_mapping_results.ipynb  basic_stats.py  get_multi_mapped_full_metadata.py  helper.py  misc.py  mm_categ.py  multi_map_categorization.ipynb  multi_mapped_categorization.py  multi_mapped_omids.csv  new_multi_mapped_omids_072023.csv  prov.py  provenance_analysis.ipynb
archive/: provenance_analysis.ipynb
imgs/: mapping_class_diagram.plantuml
oc_alignoa/: main.py  mapping.py
oc_alignoa/analytics/: README.md  helper.py  mm_categ.py  mm_db_schema.sql  prov_analysis.py
omid_openalex/: config.yaml  config_server.yaml  main.py  mapping.py  utils.py
omid_openalex/analytics/: README.md  helper.py  multi_map_categorization.ipynb  prov_analysis.py  prov_analysis_config.yaml
omid_openalex/preprocess/: config.yaml  create_oa_tables_db.ipynb  mapping.py  preprocess_dump.py
omid_openalex/preprocess/.ipynb_checkpoints/: create_oa_tables_db-checkpoint.ipynb
omid_openalex/process/: process.py
test/: meta_sample.csv  test_mapping.py  test_openalex_processor.py  test_preprocess_meta_tables.py
test/mapping/actual_multi_mapped_out/: multi_mapped_omids.csv
test/mapping/actual_non_mapped_out/: test.csv
test/mapping/expected_multi_mapped/: multi_mapped_omids.csv
test/mapping/expected_output/: test.csv
test/preprocess_meta_tables/actual_output_all_rows/resp_ags/: test_process_all.csv
test/preprocess_meta_tables/actual_output_all_rows/venues/: test_process_all.csv
test/preprocess_meta_tables/expected_output/primary_ents/: test.csv
test/preprocess_meta_tables/expected_output/resp_ags/: test.csv
test/preprocess_meta_tables/expected_output/venues/: test.csv
(+5 files in other folders)
