[tool.poetry]
name = "omid-openalex"
version = "0.1.0"
description = ""
authors = ["Elia Rizzetto <elia.rizzetto@gmail.com>"]
readme = "README.md"
packages = [{include = "omid_openalex"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
