[tool.poetry]
name = "omid-openalex"
version = "0.1.0"
description = "A software for mapping OpenCitations IDs (OMIDs) of bibliographic resources in OpenCitations Meta to the corresponding OpenAlex IDs."
authors = ["Elia Rizzetto <elia.rizzetto@studio.unibo.it>", "OpenCitations <tech@opencitations.net>"]
readme = "README.md"
packages = [{include = "oc_alignoa"}]
license = "ISC"
keywords = ["mapping", "oc meta", "openalex"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"
jupyter = "^1.0.0"
plotly = "^5.15.0"
jupyter-dash = "^0.4.2"
chart-studio = "^1.1.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
